--- a/plugin.xml
+++ b/plugin.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-			id="twitter-connect-plugin"
+			id="twitter-client-plugin"
 	  version="0.4.0">
-	<name>Twitter Connect</name>
-	<description>Twitter Connect Plugin - Allows single-sign on logins using Twitter</description>
+	<name>Twitter Client</name>
+	<description>Twitter Client Plugin - Allows single-sign on logins using Twitter + API calls</description>
 	<license>Apache 2.0</license>
 	<keywords>cordova,twitter,login,connect</keywords>
-	<repo>https://git-wip-us.apache.org/repos/asf/cordova-plugin-splashscreen.git</repo>
-	<issue>https://issues.apache.org/jira/browse/CB/component/12320653</issue>
+	<repo>https://github.com/sandro-salles/twitter-connect-plugin.git</repo>
+	<issue>https://github.com/sandro-salles/twitter-connect-plugin</issue>
 
 	<engines>
 		<engine name="cordova-android" version=">3.9.9" /><!-- Requires Gradle building -->
 <!--		<engine name="cordova-ios" version=">=1.7.1" />-->
 	</engines>
 
-	<js-module src="www/TwitterConnect.js" name="TwitterConnect">
-		<clobbers target="TwitterConnect" />
+	<js-module src="www/TwitterClient.js" name="TwitterClient">
+		<clobbers target="TwitterClient" />
 	</js-module>
 
 	<preference name="FABRIC_KEY" />
@@ -23,8 +23,8 @@
 	<platform name="android">
 		
 		<config-file target="res/xml/config.xml" parent="/*">
-			<feature name="TwitterConnect">
-				<param name="android-package" value="com.manifestwebdesign.twitterconnect.TwitterConnect" />
+			<feature name="TwitterClient">
+				<param name="android-package" value="com.manifestwebdesign.twitterclient.TwitterClient" />
 			</feature>
 		</config-file>
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
@@ -32,19 +32,19 @@
 		</config-file>
 		 
 		<framework src="src/android/twitter.gradle" custom="true" type="gradleReference" />
-		<source-file src="src/android/TwitterConnect.java" target-dir="src/com/manifestwebdesign/twitterconnect" />
+		<source-file src="src/android/TwitterClient.java" target-dir="src/com/manifestwebdesign/twitterclient" />
 	</platform>
 	
 	<!-- ios -->
 	<platform name="ios">
 		<config-file target="config.xml" parent="/*">
-			<feature name="TwitterConnect">
-				<param name="ios-package" value="TwitterConnect" />
+			<feature name="TwitterClient">
+				<param name="ios-package" value="TwitterClient" />
 			</feature>
 		</config-file>
 		
-		<header-file src="src/ios/TwitterConnect.h" />
-		<source-file src="src/ios/TwitterConnect.m" />
+		<header-file src="src/ios/TwitterClient.h" />
+		<source-file src="src/ios/TwitterClient.m" />
 		
 		<framework src="src/ios/Fabric.framework" custom="true" />
 		<framework src="src/ios/TwitterKit.framework" custom="true" />
