--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twitter-connect-plugin",
   "version": "0.4.0",
-  "description": "Twitter Connect Plugin - Allows single-sign on logins using Twitter",
+  "description": "Twitter Client Plugin - Allows single-sign on logins using Twitter + API calls",
   "cordova": {
     "id": "twitter-connect-plugin",
     "platforms": [
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ManifestWebDesign/twitter-connect-plugin.git"
+    "url": "git+https://github.com/sandro-salles/twitter-client-plugin.git"
   },
   "keywords": [
     "cordova",
@@ -31,7 +31,7 @@
   "author": "Nathan Kerr",
   "license": "Apache 2.0",
   "bugs": {
-    "url": "https://github.com/ManifestWebDesign/twitter-connect-plugin/issues"
+    "url": "https://github.com/sandro-salles/twitter-client-plugin/issues"
   },
-  "homepage": "https://github.com/ManifestWebDesign/twitter-connect-plugin#readme"
+  "homepage": "https://github.com/sandro-salles/twitter-client-plugin#readme"
 }
